feat: Add `make test` and `make fmt` commands and integrate testing into CI workflows.

--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -47,6 +47,9 @@ jobs:
     - name: Install dependencies
       run: ${{ matrix.install_deps }}
 
+    - name: Run Tests
+      run: make test
+
     - name: Build Frontend Assets
       run: make build-frontend
 
