--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -29,6 +29,9 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libsqlite3-dev
 
+      - name: Build Frontend Assets
+        run: make build-frontend
+
       - name: Run Tests
         run: make test
 
