--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -94,6 +94,9 @@ jobs:
     needs: build
     if: github.event_name == 'release' || startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
+    concurrency:
+      group: release-assets-${{ github.event.release.tag_name || github.ref_name }}
+      cancel-in-progress: false
     steps:
     - name: Download Build Artifacts
       uses: actions/download-artifact@v4
@@ -102,10 +105,12 @@ jobs:
         merge-multiple: true
 
     - name: Upload Assets to GitHub Release
-      uses: softprops/action-gh-release@v2
-      with:
-        tag_name: ${{ github.ref_name }}
-        name: ${{ github.ref_name }}
-        generate_release_notes: true
-        files: dist/*
-        fail_on_unmatched_files: true
+      env:
+        GH_TOKEN: ${{ github.token }}
+        TAG_NAME: ${{ github.event.release.tag_name || github.ref_name }}
+      run: |
+        set -euo pipefail
+        if ! gh release view "${TAG_NAME}" >/dev/null 2>&1; then
+          gh release create "${TAG_NAME}" --title "${TAG_NAME}" --generate-notes
+        fi
+        gh release upload "${TAG_NAME}" dist/* --clobber
