--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -106,6 +106,7 @@ jobs:
     - name: Upload Assets to GitHub Release
       env:
         GH_TOKEN: ${{ github.token }}
+        GH_REPO: ${{ github.repository }}
         TAG_NAME: ${{ github.event.release.tag_name || github.ref_name }}
       run: |
         set -euo pipefail
